Updated .gitignore to include input_files directory and modified menu_crawler.py to use input_files for saving results. Enhanced multi_url_crawler.py to load URLs from both text and JSON files, with improved error handling and output prefix options. Updated README.md to reflect new input file formats and usage instructions.

--- a/.gitignore
+++ b/.gitignore
@@ -35,4 +35,8 @@ ENV/
 
 # Scraped Docs - ignore contents but keep directory
 scraped_docs/*
-!scraped_docs/.gitkeep 
+!scraped_docs/.gitkeep
+
+# Input Files - ignore contents but keep directory
+input_files/*
+!input_files/.gitkeep 
